opam-version: "2.0"
synopsis: "CLI program for controlling the spotify desktop client"
author: "John Else <john.else@gmail.com>"
maintainer: "John Else <john.else@gmail.com>"
homepage: "https://github.com/johnelse/spotify-cli"
bug-reports: "https://github.com/johnelse/spotify-cli/issues"
dev-repo: "git://github.com/johnelse/spotify-cli"
build: [
  ["./configure"]
  [make "build"]
]
install: [
  [make "PREFIX=%{prefix}%" "install"]
]
remove: [
  [make "PREFIX=%{prefix}%" "uninstall"]
]
depends: [
  "dune" {>= "1.6"}
  "cmdliner"
  "lwt_ssl"
  "obus"
  "ocaml-migrate-parsetree"
  "mpris"
  "mpris-clients"
  "spotify-web-api"
]
